--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -18,7 +18,7 @@
             <ul style="padding-left: 40px;" class="list-inline">
                 <li style="padding:10px;" ng-repeat="(key, values) in property_sets">
                     <div ng-repeat="process in values">
-                        <b ng-if="process.does_transform === true">
+                        <b ng-if="process.does_transform === true && process.direction == 'out'">
                             <img style="height: 30px;padding-bottom: 10px; margin-right:5px"
                                  src="assets/img/splash/process-icon.png">
                             <a ng-class="{'underline': key === ps_id}"
