updates to the view modes

--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -4,9 +4,9 @@
             <div class="details-sidebar" style="margin-bottom: -900px;padding-bottom: 900px;">
                 <div class="row">
                     <div class="col-xs-12" style="margin-top: 10px;">
-                        <div class="pull-right"><a ui-sref="projects.project.processes.list"> <i
+                        <div class="row pull-right"><a ui-sref="projects.project.processes.list"> <i
                                 class="fa fa-fw fa-backward"></i> Back to processes list</a></div>
-                        <h4 class="text-center process">{{template.name}}</h4>
+                        <div class="row"><b class="text-center process">{{template.name}}</b></div>
                     </div>
                 </div>
                 <sidebar-process-details></sidebar-process-details>
