--- a/website/app/application/core/projects/project/processes/transformation.html
+++ b/website/app/application/core/projects/project/processes/transformation.html
@@ -36,7 +36,9 @@
                             <div class="col-xs-6">
                                 Best Measure: <span ng-if="property.best_measure.length !== 0"
                                                     style="padding-left: 5px;">
-                                    {{property.best_measure[0].value}}  {{property.best_measure[0].units}}</span> <br>
+                                <display-measurement project="project"
+                                                     measure="property.best_measure[0]"></display-measurement>
+                                </span>
                                 Measurements:
                                 <ul>
                                     <li ng-repeat="measure in property.measurements">
