fixed sample-files-link bug and added unit choices

--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -46,7 +46,7 @@
             </div>
             <div class="row">
                 <div class="sample headings">Attachments</div>
-                <div class="row" ng-repeat="file in modal.item.files">
+                <div class="row" ng-repeat="file in modal.item.linked_files">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
