--- a/website/app/application/core/account/password/password.html
+++ b/website/app/application/core/account/password/password.html
@@ -1,12 +1,12 @@
-<div class="row" ng-controller="accountPassword"> <br>
+<div class="row" ng-controller="AccountPasswordController as password"> <br>
     <div class="col-sm-4">
         <legend>Change Password:</legend>
         <form class="form-horizontal">
-            <input class="form-control" id="inputPassword" placeholder="New Password..." ng-model="new_password"
+            <input class="form-control" id="inputPassword" placeholder="New Password..." ng-model="password.newPassword"
                    type="password">
-            <input class="form-control" placeholder="Verify Password..." ng-model="verify_new_password"
+            <input class="form-control" placeholder="Verify Password..." ng-model="password.verifyNewPassword"
                    type="password">
-            <button ng-click="changePassword()" class="btn btn-default btn-danger">Change Password</button>
+            <button ng-click="password.change()" class="btn btn-default btn-danger">Change Password</button>
         </form>
     </div>
 </div>
