--- a/website/app/application/core/account/account.html
+++ b/website/app/application/core/account/account.html
@@ -1,3 +1,3 @@
-<div class="container-fixed" ng-controller="account">
+<div class="container-fixed" ng-controller="AccountController as account">
     <div ui-view=""></div>
 </div>
