--- a/website/app/application/core/login/login.html
+++ b/website/app/application/core/login/login.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="login">
+<div class="row" ng-controller="LoginController as login">
     <div class="col-lg-offset-2 col-sm-6 col-md-6">
         <form class="form-horizontal">
             <fieldset>
@@ -7,20 +7,20 @@
                     <label class="control-label">Email:</label>
 
                     <div class="controls">
-                        <input ng-model="email" name="email" required="" class="form-control" placeholder="Email..." type="email">
+                        <input ng-model="login.email" name="email" required="" class="form-control" placeholder="Email..." type="email">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Password:</label>
                     <div class="controls">
-                        <input ng-model="password" required="" class="form-control" placeholder="Password..." type="password">
+                        <input ng-model="login.password" required="" class="form-control" placeholder="Password..." type="password">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="controls">
-                        <button class="btn btn-default btn-primary btn-lg" ng-click="login()">Login</button>
-                        <button class="btn btn-default btn-danger btn-lg" ng-click="cancel()">Cancel</button>
+                        <button class="btn btn-default btn-primary btn-lg" ng-click="login.login()">Login</button>
+                        <button class="btn btn-default btn-danger btn-lg" ng-click="login.cancel()">Cancel</button>
                     </div>
                 </div>
 
