--- a/website/app/index.html
+++ b/website/app/index.html
@@ -52,7 +52,7 @@
     </div>
 </div>
 <div class="modal fade"
-     ng-controller="newProjectModal"
+     ng-controller="newProjectModalController as project"
      id="newProject"
      tabindex="-1"
      role="dialog"
@@ -71,9 +71,9 @@
             </div>
             <div class="modal-body">
                 <label>Name:</label>
-                <input ng-model="model.name" class="form-control">
+                <input ng-model="project.name" class="form-control">
                 <br>
-                <button ng-click="createProject()"
+                <button ng-click="project.create()"
                         class="btn btn-info"
                         data-dismiss="modal">
                     Create
@@ -165,7 +165,6 @@
 <script src="application/core/account/apikey/apikey-controller.js"></script>
 <script src="application/core/account/templates/templates-controller.js"></script>
 <script src="application/core/machines/machines-controller.js"></script>
-<script src="application/core/projects/create.js"></script>
 <script src="application/core/projects/project/project-controller.js"></script>
 <script src="application/core/projects/project/project-nav-bar.js"></script>
 <script src="application/core/projects/project/home/home.js"></script>
