Switch to IIFE. Remove $scope.

--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -2,18 +2,18 @@
     <div class="row" style="background-color: #518394; margin-bottom: 0px">
         <ul style="padding-left: 5px;" class="taskbar nav nav-tabs">
             <li class="dropdown projects-drop-down">
-                <a title="{{project.name}}" class="dropdown-toggle pointer" data-toggle="dropdown"
+                <a title="{{navbar.project.name}}" class="dropdown-toggle pointer" data-toggle="dropdown"
                    style="padding-left: 5px;">
                     <i class="fa fa-fw fa-briefcase"></i>
-                    {{project.name | truncate: 25: '...'}} <span class="white badge" style="float: none;">{{projects.length}}</span>
+                    {{navbar.project.name | truncate: 25: '...'}} <span class="white badge" style="float: none;">{{navbar.projects.length}}</span>
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu projects-dropdown nav-dropdown-scrollbar" role="menu">
                     <li data-toggle="modal"
                         data-target="#newProject"><a><i class="fa fa-fw fa-plus"></i>New Project</a></li>
                     <li class="divider"></li>
-                    <li ng-repeat="p in projects"
-                        ng-class="{'active-project': p.id === project.id}" ng-click="setProject(p)">
+                    <li ng-repeat="p in navbar.projects"
+                        ng-class="{'active-project': p.id === project.id}" ng-click="navbar.setProject(p)">
                         <a>{{p.name}}</a>
                     </li>
                 </ul>
@@ -21,7 +21,7 @@
             <li role="presentation" ui-sref-active="active">
                 <a ui-sref="projects.project.home"
                    ui-sref-opts="{reload: true}"
-                   ng-click="clearSearch()"
+                   ng-click="navbar.clearSearch()"
                    class="pointer">
                     <i class="fa fa-fw fa-home"></i>Home
                 </a>
@@ -29,7 +29,7 @@
             <li role="presentation" ui-sref-active="active">
                 <a ui-sref="projects.project.processes.list"
                    ui-sref-opts="{reload: true}"
-                   ng-click="clearSearch()"
+                   ng-click="navbar.clearSearch()"
                    class="pointer">
                     <i class="fa fa-fw fa-code-fork bold"></i>Processes
                 </a>
@@ -37,7 +37,7 @@
             <li role="presentation" ui-sref-active="active">
                 <a ui-sref="projects.project.files.all"
                    ui-sref-opts="{reload: true}"
-                   ng-click="clearSearch()"
+                   ng-click="navbar.clearSearch()"
                    class="pointer">
                     <i class="fa fa-fw fa-files-o"></i> Files
                 </a>
@@ -45,7 +45,7 @@
             <li role="presentation" ui-sref-active="active">
                 <a ui-sref="projects.project.samples.all"
                    ui-sref-opts="{reload: true}"
-                   ng-click="clearSearch()"
+                   ng-click="navbar.clearSearch()"
                    class="pointer">
                     <i class="fa fa-fw fa-cubes"></i> Samples
                 </a>
@@ -53,7 +53,7 @@
             <li role="presentation" ui-sref-active="active">
                 <a ui-sref="projects.project.reviews"
                    ui-sref-opts="{reload: true}"
-                   ng-click="clearSearch()"
+                   ng-click="navbar.clearSearch()"
                    class="pointer">
                     <i class="fa fa-fw fa-comment"></i> Reviews
                 </a>
@@ -61,7 +61,7 @@
             <li ng-if="false" role="presentation" ui-sref-active="active">
                 <a ui-sref="projects.project.notes"
                    ui-sref-opts="{reload: true}"
-                   ng-click="clearSearch()"
+                   ng-click="navbar.clearSearch()"
                    class="pointer">
                     <i class="fa fa-fw fa-edit"></i>Notes
                 </a>
@@ -71,19 +71,10 @@
                 <a style="padding: 10px 5px;"
                    ui-sref="projects.project.access"
                    ui-sref-opts="{reload: true}"
-                   ng-click="clearSearch()"
+                   ng-click="navbar.clearSearch()"
                    class="pointer"
                    title="Project Settings">
                     <i class="fa fa-fw fa-1x fa-gear"></i>Settings
-                </a>
-            </li>
-            <li ng-if="false" ng-class="{'active': activePage === 'sideboard'}">
-                <a style="padding: 10px 5px;"
-                   ng-class="{'tool-inactive': !showPanel('sideboard'), 'tool-active': showPanel('sideboard')}"
-                   class="pointer"
-                   ng-click="togglePanel('sideboard')" title="Sideboard">
-                    <i class="fa fa-fw fa-1x fa-clipboard"></i>
-                    <span class="badge badge-superscript-count">{{list.sideboard.length}}</span>
                 </a>
             </li>
         </ul>
