--- a/website/app/application/core/projects/project/access/access.html
+++ b/website/app/application/core/projects/project/access/access.html
@@ -4,29 +4,31 @@
 
         <table class="table table-boxed">
             <thead>
-            <th>User</th>
-            <th>Delete</th>
+            <tr>
+                <th>User</th>
+                <th>Delete</th>
+            </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="ac in project.users | orderBy: 'user_id'">
-                <td>{{ac.user_id}}</td>
-                <td ng-if="isOwnerOrUser(ac.user_id)">
-                    <button ng-click="deleteUser(ac.id)" class="btn btn-danger">Remove</button>
+            <tr ng-repeat="user in access.project.users | orderBy: 'user_id'">
+                <td>{{user.user_id}}</td>
+                <td ng-if="access.isOwnerOrUser(user.user_id)">
+                    <button ng-click="access.deleteUser(user.id)" class="btn btn-danger">Remove</button>
                 </td>
-                <td ng-if="!isOwnerOrUser(ac.user_id)">Not Authorized</td>
+                <td ng-if="!access.isOwnerOrUser(user.user_id)">Not Authorized</td>
             </tr>
             </tbody>
         </table>
-        <div class="row" ng-show="isOwner(signed_in_user)">
+        <div class="row" ng-show="access.isOwner(access.signedInUser)">
             <div class="form-group">
                 <div class="col-lg-6">
-                    <select ui-select2="select2IconOptions"
+                    <select ui-select2
                             ng-multiple="false"
-                            ng-options="user.email for user in all_users | orderBy:'email'"
-                            class="form-control" ng-model="bk.user">
+                            ng-options="user.email for user in access.allUsers | orderBy:'email'"
+                            class="form-control" ng-model="access.user">
                     </select>
                 </div>
-                <button class="btn btn-info" ng-click="addUser()" ng-disabled="!bk.user">Add</button>
+                <button class="btn btn-info" ng-click="access.addUser()" ng-disabled="!access.user">Add</button>
             </div>
         </div>
     </div>
