--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -5,7 +5,7 @@
                 <file-upload-panel></file-upload-panel>
             </div>
             <div style="padding: 20px;width: 100%; height: 100%;"
-                 angular-grid="gridOptions"
+                 angular-grid="files.gridOptions"
                  class="ag-file-browser">
             </div>
         </div>
