userguide updates to navigation and overview

--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -1,4 +1,5 @@
-<div style="padding-left: 5px;">
+<div class="row" style="padding-left: 5px;">
+    <br>
     <div class="panel panel-primary">
         <div class="panel-heading help-color">
             <i class="fa fa-fw fa-book"></i>
@@ -24,76 +25,6 @@
                                 projects / data entered.
                                 User Start is intended to help all the new users who are trying to understand what
                                 MaterialsCommons does.
-                            </div>
-                            <b>Overview</b>
-
-                            <p>Provenance is the heart of the Materials Commons.
-                                The flowchart below is designed to help user understand the workflow of how to create
-                                Provenance. Areas highlighted in grey are the essential steps to create provenance</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/user-start/usertstart2.png">
-                            </div>
-                            <b>Create Project</b>
-
-                            <p>In-order to upload files first you have to create project(or workspace). To create a
-                                project click on drop-down list and hit "New Project" which will ask you to enter name
-                                for the project. You can create multiple projects which means evry project will have its
-                                own workspace</p>
-                            <b>Why you have to create project ?</b>
-
-                            <p>Project is like your workspace where you can store files , notes, samples , provenance
-                                related to that project.</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/user-start/create-project-ustart.png">
-                            </div>
-                            <b>Upload files</b>
-
-                            <p>Under the files panel you will see an empty project folder is created. Now you can click
-                                the upload icon <i class="fa fa-fw fa-upload"></i>
-                                to upload your files into the project.</p>
-                            <b>Why you have to upload files ?</b>
-
-                            <p> Prior to creating the provenance (refer to the flowchart) you will have to upload your
-                                data onto Material
-                                Commons. So that this uploaded data will be available during provenance creation.</p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/user-start/upload-files-ustart.png">
-                            </div>
-                            <b><a ng-click="goTo('createSample')">Create Sample</a></b>
-
-                            <p>Under the samples panel click on <i class="fa fa-fw fa-plus"></i> icon and fill in the
-                                details of the sample and hit
-                                create which will add sample to the list.</p>
-                            <b>Why you have to create sample ?</b>
-
-                            <p>Sample is a piece of material on which you wanted to perform some experiments. Similar to
-                                file uploads you have to create your sample so that it will be available for you to
-                                choose during provenance creation </p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/user-start/create-sample-ustart.png">
-                            </div>
-                            <b>Associate Provenance</b>
-
-                            <p>Under the processes panel click on the <i class="fa fa-fw fa-plus"></i> icon to create
-                                process. Then
-                                from the drop-down list select what type of experiment/analysis you wanted to run and
-                                then associate your data at the input/output steps.</p>
-                            <b>Why you have to create provenance?</b>
-
-                            <p>The purpose of creating provenance is to keep track of the history of changes done to
-                                the data items. </p>
-
-                            <div style="padding-top: 10px;padding-bottom: 10px;">
-                                <img class="img-responsive"
-                                     src="assets/img/userguide/user-start/create-provenance-ustart.png">
                             </div>
                         </div>
                     </li>
